hphp/hack/test/decl/yield_deeper.php.typecheck.exp
File "yield_deeper.php", line 20, characters 3-45:
`await` can only operate on an `Awaitable` (Typing[4110])
  File "yield_deeper.php", line 20, characters 3-45:
  Expected `Awaitable<nothing>`
  File "yield_deeper.php", line 20, characters 9-45:
  But got `AsyncGenerator<null, int, mixed>` (result of `async function` containing a `yield`)
